aws-github/.kubefirst/clusters/mgmt-template/components/vault/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vault
  namespace: vault
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`vault.<DOMAIN_NAME>`)
    services:
    - name: vault
      port: 80
  tls:
    secretName: vault-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: vault
spec:
  redirectScheme:
    scheme: https
    permanent: true
